--- a/kokoa_talk/chats.html
+++ b/kokoa_talk/chats.html
@@ -7,6 +7,7 @@
     <title>Chats - Kokoa Clone</title>
   </head>
   <body>
+    <!--tqtq-->
     <div class="status-bar">
       <div class="status-bar_column">
         <span>No Service</span>
