--- a/kokoa_talk/friends.html
+++ b/kokoa_talk/friends.html
@@ -7,6 +7,7 @@
     <title>Firend - Kokoa Clone</title>
   </head>
   <body>
+    <!--asdasd-->
     <div class="status-bar">
       <div class="status-bar_column">
         <span>No Service</span>
