--- a/kokoa_talk/friends.html
+++ b/kokoa_talk/friends.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <!--asdasd-->
+
+    <!--asdasd-->
     <div class="status-bar">
       <div class="status-bar_column">
         <span>No Service</span>
